<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">投屏助手</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="dialog_wifi_detail_button">去连接WIFI</string>
    <string name="dialog_wifi_detail_common_problem">2、投屏常见问题</string>
    <string name="dialog_wifi_detail_content_condition">若车机娱乐流量不足时，也可通过以下方式使用投屏功能:</string>
    <string name="dialog_wifi_detail_content_step">① 车机先连接WiFi \n② 打开投屏助手，手机连接至投屏车机热点 \n③ 连接成功后,即可通过手机发起投屏</string>
    <string name="dialog_wifi_detail_content_step_one">① 手机连接WiFi \n② 车机连接相同WiFi（无需打开投屏助手，若已打开投屏助手，注意关闭热点）\n③ 连接成功后，即可通过手机发起投屏</string>
    <string name="dialog_wifi_detail_content_step_two">① 手机打开热点功能 \n② 车机连接手机热点 \n③ 连接成功后，无需打开投屏助手，即可通过手机发起投屏</string>
    <string name="dialog_wifi_detail_problem_one">问题1：无法投屏成功 或 找不到投屏设备 \n① 手机视频软件版本可能较低，建议升级至最新版本后再试 \n② 可在大屏关闭投屏热点后重新打开，手机再次连接后投屏 \n③ 或者尝试先在手机上断开投屏热点连接，再次连接后投屏</string>
    <string name="dialog_wifi_detail_problem_two">问题2：用AirPlay屏幕镜像后，部分视频软件无法正常投屏 \n针对AirPlay屏幕镜像-视频播放场景，部分手机视频软件并未做适配优化，可能造成视频画面无法正常投出。 建议更换投屏方式，通过点击视频中的投屏图标进行投屏</string>
    <string name="dialog_wifi_detail_subtitle_choose">方式1： 车机连接其他WiFi，手机连接投屏热点（推荐） \n步骤：</string>
    <string name="dialog_wifi_detail_subtitle_choose_one">方式2： 车机和手机均连接同一WiFi \n注意：该方式请确保投屏热点已关闭，否则可能无法投屏 \n步骤：</string>
    <string name="dialog_wifi_detail_subtitle_choose_two">方式3： 车机连接投屏手机热点 \n注意：该方式虽然可支持部分应用投屏，但体验不稳定，不建议使用 \n步骤：</string>
    <string name="dialog_wifi_detail_subtitle_condition">1、其他投屏方式引导：</string>
    <string name="dialog_wifi_detail_subtitle_step">步骤：</string>
    <string name="dialog_wifi_detail_tip">注意: 通过车机连接投屏手机所发送的热点，也可支持部分应用投屏，但体验不稳定，不建议使用</string>
    <string name="dialog_wifi_detail_title">连接其他WIFI投屏指引</string>
    <string name="dmr_name">%s的主驾屏</string>
    <string name="education_info_mirror">打开苹果手机屏幕镜像功能，设备选择「%s」，即可镜像投屏</string>
    <string name="education_info_mirror_default">打开苹果手机屏幕镜像功能，设备选择「鹏友的主驾屏」，即可镜像投屏</string>
    <string name="education_info_video">打开手机视频APP内TV图标，设备选「%s」，即可视频投屏</string>
    <string name="education_info_video_default">打开手机视频APP内TV图标，设备选「鹏友的主驾屏」，即可视频投屏</string>
    <string name="education_info_video_tip">* 推荐使用爱奇艺、腾讯视频、bilibili、芒果TV、优酷、咪咕视频、搜狐视频发起投屏</string>
    <string name="education_title_mirror">镜像投屏（目前仅支持苹果设备）</string>
    <string name="education_title_video">视频APP投屏</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="flow_warning_button">购买流量</string>
    <string name="flow_warning_content">在线视频可能无法投屏播放，请及时点击「购买流量」去购买</string>
    <string name="flow_warning_title">娱乐流量已耗尽</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hotspot_device_connected">%d个设备</string>
    <string name="hotspot_info_name_default">小鹏X9–123456</string>
    <string name="hotspot_info_name_title">热点名称</string>
    <string name="hotspot_info_password_default">mm123456</string>
    <string name="hotspot_info_password_default_single">0</string>
    <string name="hotspot_info_password_refresh">刷新密码</string>
    <string name="hotspot_info_password_title">热点密码</string>
    <string name="hotspot_name_unknown">投屏设备%d</string>
    <string name="hotspot_no_device">0个设备</string>
    <string name="hotspot_notify_cancel">取消</string>
    <string name="hotspot_notify_confirm">刷新</string>
    <string name="hotspot_notify_content">已连接的设备将断开，是否刷新？</string>
    <string name="hotspot_notify_title">刷新热点密码</string>
    <string name="hotspot_projection_step_content">① 开启车机热点，投屏手机连接热点；\n② 视频投屏：视频APP内选择视频点击TV按钮\n  镜像投屏：手机开启屏幕镜像功能(仅苹果设备)；\n③ 选择【%s】，开始投屏</string>
    <string name="hotspot_projection_step_default">① 开启车机热点，投屏手机连接热点；\n② 视频投屏：视频APP内选择视频点击TV按钮\n  镜像投屏：手机开启屏幕镜像功能(仅苹果设备)；\n③ 选择【投屏设备名获取中…】，开始投屏</string>
    <string name="hotspot_projection_step_title">投屏步骤：</string>
    <string name="hotspot_tips_enabled">* 手机WIFI连接以下热点，即可投屏</string>
    <string name="hotspot_tips_open">* 请先打开车机热点再连接</string>
    <string name="hotspot_video_restore">恢复投屏</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="loading_text">投屏加载中…</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="traffic_info_buy">购买流量</string>
    <string name="traffic_info_cost_default">0</string>
    <string name="traffic_info_cost_title">本次投屏消耗</string>
    <string name="traffic_info_remain_default">0</string>
    <string name="traffic_info_remain_title">预估剩余流量 </string>
    <string name="traffic_info_tip_normal">* 在线视频播放注意流量消耗。也可查看其他投屏方式</string>
    <string name="traffic_info_tip_wifi">注：手机与车机连接其他相同WIFI也可投屏，且不消耗车机流量</string>
    <string name="traffic_info_tip_wifi_detail">其他投屏方式</string>
    <string name="traffic_info_unit">GB</string>
    <string name="wifi_hotspot_switch">车机热点</string>
    <string name="x_font_typeface_number_bold">xpeng-fonts-number-bold</string>
</resources>