<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:scrollbarStyle="insideOverlay" android:id="@+id/sv_dialog_wifi_detail" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="114dp" android:layout_marginEnd="114dp">
    <com.xiaopeng.xui.widget.XConstraintLayout android:orientation="vertical" android:id="@+id/cl_dialog_wifi_detail" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.xiaopeng.xui.widget.XTextView android:textSize="34sp" android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_subtitle_condition" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dialog_wifi_detail_subtitle_condition" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XFont.Title2"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_content_condition" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/dialog_wifi_detail_content_condition" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_subtitle_condition" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_subtitle_step" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/dialog_wifi_detail_subtitle_choose" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_content_condition" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_content_step" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/dialog_wifi_detail_content_step" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_subtitle_step" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/dialog_wifi_detail_subtitle_choose_one" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/dialog_wifi_detail_subtitle_choose_one" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_content_step" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_content_step_one" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/dialog_wifi_detail_content_step_one" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_wifi_detail_subtitle_choose_one" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/dialog_wifi_detail_subtitle_choose_two" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/dialog_wifi_detail_subtitle_choose_two" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_content_step_one" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_content_step_two" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/dialog_wifi_detail_content_step_two" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_wifi_detail_subtitle_choose_two" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="34sp" android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_common_problem" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/dialog_wifi_detail_common_problem" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_content_step_two" style="@style/XFont.Title2"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_problem_one" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/dialog_wifi_detail_problem_one" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_common_problem" style="@style/XFont.Body1"/>
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_02" android:id="@+id/tv_dialog_wifi_detail_problem_two" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/dialog_wifi_detail_problem_two" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_dialog_wifi_detail_problem_one" style="@style/XFont.Body1"/>
    </com.xiaopeng.xui.widget.XConstraintLayout>
</com.xiaopeng.xui.widget.XScrollView>
