<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/xfl_home_main" android:background="@drawable/bg_home_main" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.view.XView android:layout_width="60dp" android:layout_height="match_parent" android:layout_weight="0.143"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_left" android:background="@drawable/bg_home_main" android:layout_width="882dp" android:layout_height="wrap_content" android:layout_marginTop="120dp" android:layout_weight="1">
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_1" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="72dp" android:layout_marginTop="24dp" android:text="@string/app_name" android:layout_marginStart="12dp" style="@style/XFont.Title1"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@+id/ll_hotspot" android:background="@drawable/bg_home_layout" android:layout_width="match_parent" android:layout_height="636dp" android:layout_marginTop="48dp">
            <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/ll_hotspot_switch" android:layout_width="match_parent" android:layout_height="72dp" android:layout_marginTop="58dp" android:layout_marginStart="60dp">
                <com.xiaopeng.xui.widget.XSwitch android:layout_gravity="center_vertical" android:id="@+id/s_hotspot_switch" android:padding="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_1" android:layout_gravity="center_vertical" android:id="@+id/tv_hotspot_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_hotspot_switch" android:layout_centerVertical="true" android:layout_marginStart="26dp" android:layout_toEndOf="@+id/s_hotspot_switch" style="@style/XFont.Body1"/>
                <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/x_color_text_highlight" android:id="@+id/btn_video_play_restore" android:padding="0dp" android:visibility="gone" android:layout_width="182dp" android:layout_height="72dp" android:text="@string/hotspot_video_restore" android:layout_centerVertical="true" android:layout_marginEnd="60dp" android:layout_alignParentEnd="true" style="@style/XButton.V5.Real.Mid.Primary"/>
            </com.xiaopeng.xui.widget.XRelativeLayout>
            <com.xiaopeng.xui.widget.XFrameLayout android:id="@+id/ll_hotspot_titles" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="62dp" android:layout_marginStart="60dp">
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_3" android:layout_gravity="center_vertical" android:id="@+id/tv_hotspot_name_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotspot_info_name_title" style="@style/XFont.Body2"/>
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_3" android:layout_gravity="center_vertical" android:id="@+id/tv_hotspot_pass_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotspot_info_password_title" android:layout_marginStart="365dp" style="@style/XFont.Body2"/>
            </com.xiaopeng.xui.widget.XFrameLayout>
            <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/fl_hotspot_name_and_pass" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginStart="60dp">
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_1" android:layout_gravity="center_vertical" android:id="@+id/tv_hotspot_name_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotspot_info_name_default" style="@style/XFont.Title2"/>
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_1" android:layout_gravity="center_vertical" android:id="@+id/tv_hotspot_pass_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotspot_info_password_default" android:layout_marginStart="365dp" style="@style/XFont.Title2"/>
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_green" android:id="@+id/tv_hotspot_pass_refresh" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotspot_info_password_refresh" android:layout_centerVertical="true" android:layout_marginEnd="66dp" android:layout_alignParentEnd="true" style="@style/XFont.Title3"/>
            </com.xiaopeng.xui.widget.XRelativeLayout>
            <com.xiaopeng.xui.widget.XFrameLayout android:id="@+id/fl_hotspot_devices" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="60dp" android:layout_marginStart="60dp" android:layout_marginEnd="60dp">
                <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_1" android:layout_gravity="center" android:id="@+id/tv_hotspot_devices" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hotspot_no_device" style="@style/XFont.Body2"/>
            </com.xiaopeng.xui.widget.XFrameLayout>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XRelativeLayout android:layout_gravity="center_horizontal" android:id="@+id/ll_traffic" android:background="@drawable/bg_home_layout" android:layout_width="match_parent" android:layout_height="421dp" android:layout_marginTop="35dp">
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_3" android:id="@+id/tv_traffic_remain_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:text="@string/traffic_info_remain_title" android:layout_marginStart="60dp" style="@style/XFont.Body2"/>
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_3" android:id="@+id/tv_traffic_cost_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:text="@string/traffic_info_cost_title" android:layout_marginStart="396dp" style="@style/XFont.Body2"/>
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_green" android:id="@+id/tv_traffic_buy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:text="@string/traffic_info_buy" android:layout_marginEnd="66dp" android:layout_alignParentEnd="true" style="@style/XFont.Title3"/>
            <com.xiaopeng.xui.widget.XConstraintLayout android:id="@+id/cl_traffic_details" android:layout_width="wrap_content" android:layout_height="67dp" android:layout_marginTop="146dp" android:layout_marginStart="60dp">
                <com.xiaopeng.wirelessprojection.core.view.CustomXTextView android:textSize="56sp" android:textColor="@color/x_color_text_1" android:id="@+id/tv_traffic_remain_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_remain_default" android:fontFamily="@string/x_font_typeface_number_bold" app:layout_constraintBottom_toBottomOf="0"/>
                <com.xiaopeng.wirelessprojection.core.view.CustomXTextView android:textSize="24sp" android:textColor="@color/x_color_text_3" android:id="@+id/tv_traffic_remain_detail_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_unit" android:layout_marginStart="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/tv_traffic_remain_detail"/>
            </com.xiaopeng.xui.widget.XConstraintLayout>
            <com.xiaopeng.xui.widget.XConstraintLayout android:layout_width="wrap_content" android:layout_height="67dp" android:layout_marginTop="146dp" android:layout_marginStart="396dp">
                <com.xiaopeng.xui.widget.XTextView android:textSize="56sp" android:textColor="@color/x_color_text_1" android:id="@+id/tv_traffic_cost_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_cost_default" android:fontFamily="@string/x_font_typeface_number_bold" android:layout_marginStart="336dp" app:layout_constraintBottom_toBottomOf="0"/>
                <com.xiaopeng.xui.widget.XTextView android:textSize="24sp" android:textColor="@color/x_color_text_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_unit" android:layout_marginStart="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/tv_traffic_cost_detail"/>
            </com.xiaopeng.xui.widget.XConstraintLayout>
            <com.xiaopeng.wirelessprojection.core.view.CustomXTextView android:textColor="@color/x_color_text_3" android:id="@+id/tv_traffic_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="300dp" android:text="@string/traffic_info_tip_normal" android:layout_marginStart="60dp" style="@style/XFont.Body2"/>
        </com.xiaopeng.xui.widget.XRelativeLayout>
        <com.xiaopeng.xui.widget.XConstraintLayout android:id="@+id/ll_wifi_tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_tip_wifi" app:layout_constraintStart_toStartOf="0" style="@style/XFont.Body3"/>
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_green" android:id="@+id/tv_traffic_info_tip_wifi_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/traffic_info_tip_wifi_detail" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XFont.Body3"/>
        </com.xiaopeng.xui.widget.XConstraintLayout>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.view.XView android:layout_width="32dp" android:layout_height="match_parent" android:layout_weight="0.02"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_right" android:background="@drawable/bg_home_main" android:layout_width="882dp" android:layout_height="wrap_content" android:layout_marginTop="120dp" android:layout_weight="1">
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/home_main_title" android:id="@+id/tv_about" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="72dp" android:layout_marginTop="24dp" android:text="@string/app_name" android:layout_marginStart="12dp" style="@style/XFont.Title1"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/ll_education" android:background="@drawable/bg_home_layout" android:layout_width="match_parent" android:layout_height="1092dp" android:layout_marginTop="48dp">
            <com.xiaopeng.xui.widget.XTextView android:textSize="40sp" android:textColor="@color/x_color_text_1" android:id="@+id/tv_education_video_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/education_title_video" android:layout_marginStart="60dp" style="@style/XFont.Title3"/>
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_2" android:id="@+id/tv_education_video_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/education_info_video_default" android:maxLines="3" android:layout_marginStart="60dp" android:layout_marginEnd="66dp" style="@style/XFont.Body2"/>
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_4" android:id="@+id/tv_education_video_tips" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/education_info_video_tip" android:layout_marginStart="60dp" android:layout_marginEnd="66dp" style="@style/XFont.Body3"/>
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_education_video" android:background="@drawable/education_image_video" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginStart="60dp"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="40sp" android:textColor="@color/x_color_text_1" android:id="@+id/tv_education_mirror_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="60dp" android:text="@string/education_title_mirror" android:layout_marginStart="60dp" style="@style/XFont.Title3"/>
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_color_text_2" android:id="@+id/tv_education_mirror_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/education_info_mirror_default" android:maxLines="3" android:layout_marginStart="60dp" android:layout_marginEnd="66dp" style="@style/XFont.Body2"/>
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_education_mirror" android:background="@drawable/education_image_mirror" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:layout_marginStart="60dp"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.view.XView android:layout_width="60dp" android:layout_height="match_parent" android:layout_weight="0.143"/>
</com.xiaopeng.xui.widget.XLinearLayout>
